--- a/style.css
+++ b/style.css
@@ -3,6 +3,16 @@
     margin: 0;
 }
 
-h1{
-    background-color:red;
+.container{
+    height: 50vh;
+    font-size:40px;
+    display: flex;
+    justify-content:center;
+    align-items:center;
+    background-color:rgb(143, 123, 123);
+}
+button {
+    font-size: 40px;
+    
+    
 }
