--- a/style.css
+++ b/style.css
@@ -3,16 +3,55 @@
     margin: 0;
 }
 
-.container{
-    height: 50vh;
-    font-size:40px;
-    display: flex;
-    justify-content:center;
-    align-items:center;
-    background-color:rgb(143, 123, 123);
+h1{
+    color:white;
 }
-button {
+
+hr{
+    height: 1px;
+    width: 100%;
+    background-color:black;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.container, .back{
+    height: 50vh;
+    font-size:30px;
+    display: flex;
+    flex-direction:column;
+    text-align:center;
+    background-color:rgb(143, 123, 123);
+    padding:50px;
+}
+
+#para {
+    background-color:rgb(0, 255, 21);
+    width:400px;
+    border-radius: 75%;
+    padding:30px;
+    align-items: center;
+    font-size:20px;
+    margin:10px auto;
+}
+.first{
     font-size: 40px;
-    
+    background-color:rgb(67, 178, 206);
+    margin:4px auto;
+    padding:10px;
+    width:500px;
+}
+.second {
+    width:500px;
+    align-items:center;
+    margin: 10px auto;
+}
+
+.counter{
+    background-color:rgb(221, 133, 233);
+    height:500px;
+    margin: 0;
+    text-align:center;
+    padding-top: 30px;
     
 }
