--- a/styles/style.css
+++ b/styles/style.css
@@ -4,6 +4,7 @@
 
 h1 {
   color: #f0dddd;
+  font-size: larger;
 }
 
 hr {
@@ -16,12 +17,14 @@ hr {
 
 button {
   text-transform: uppercase;
-  padding: 5px;
+  padding: 20px;
   font-family: 'Courier New';
   font-weight: bold;
+  border-radius: 50%;
+  border: none;
 }
 
-.container, .back {
+.container, .counter {
   height: 50vh;
   font-size: 30px;
   display: -webkit-box;
@@ -33,46 +36,31 @@ button {
           flex-direction: column;
   text-align: center;
   background-color: #8f7b7b;
-  padding: 50px;
+  padding: 40px;
+  row-gap: 70px;
 }
 
-#para {
-  background-color: #b3cfe2;
-  width: 400px;
-  border-radius: 75%;
-  padding: 30px;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  font-size: 20px;
-  margin: 10px auto;
-}
-
-.first {
-  font-size: 40px;
-  background-color: #43b2ce;
-  margin: 4px auto;
-  padding: 10px;
-  width: 500px;
+select option {
+  text-transform: uppercase;
+  font-weight: bold;
 }
 
 .second {
-  width: 500px;
+  width: 200px;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
   margin: 10px auto;
+  height: 50px;
+  border-radius: 5%;
+  text-align: center;
+  border: none;
 }
 
 .counter {
-  background-color: #dd85e9;
-  height: 500px;
-  padding: 20px;
-  text-align: center;
-}
-
-.fix {
-  padding-top: 50px;
+  background-color: #3e4747;
+  margin-bottom: 40px;
+  row-gap: 30px;
 }
 
 span {
