--- a/styles/style.scss
+++ b/styles/style.scss
@@ -8,6 +8,7 @@ $h1Color:rgb(240, 221, 221);
 
 h1{
     color: $h1Color;
+    font-size: larger;
     
 }
 
@@ -21,54 +22,52 @@ hr{
 
 button{
 text-transform: uppercase;
-padding:5px;
+padding:20px;
 font-family:'Courier New';
 font-weight:bold;
+border-radius:50%;
+border:none;
 }
 
-.container, .back{
+.container, .counter{
     height: 50vh;
     font-size:30px;
     display: flex;
     flex-direction:column;
     text-align:center;
     background-color:rgb(143, 123, 123);
-    padding:50px;
+    padding:40px;
+    row-gap: 70px;
 }
 
-#para {
-    background-color:rgb(179, 207, 226);
-    width:400px;
-    border-radius: 75%;
-    padding:30px;
-    align-items: center;
-    font-size:20px;
-    margin:10px auto;
+select option { 
+ text-transform: uppercase;
+ font-weight: bold;
+
 }
-.first{
-    font-size: 40px;
-    background-color:rgb(67, 178, 206);
-    margin:4px auto;
-    padding:10px;
-    width:500px;
-}
+
+
 .second {
-    width:500px;
+    width:200px;
     align-items:center;
     margin: 10px auto;
+    height:50px;
+    border-radius:5%;
+    text-align:center;
+    border:none;
+    
+    
 }
 
 .counter{
-    background-color:rgb(221, 133, 233);
-    height:500px;
-    padding:20px;
-    text-align:center;
-    
+    background-color:rgb(62, 71, 71);
+    margin-bottom: 40px;
+    row-gap: 30px;
     
 }
-.fix{
-    padding-top: 50px;
-}
+
+
+
 span{
     font-size: 100px;
     color:rgb(218, 108, 108);
