button update style>

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -22,11 +22,12 @@ hr{
 
 button{
 text-transform: uppercase;
-padding:20px;
+padding:30px;
 font-family:'Courier New';
 font-weight:bold;
 border-radius:50%;
 border:none;
+margin-bottom: 20px;
 }
 
 .container, .counter{
