--- a/styles/style.css
+++ b/styles/style.css
@@ -23,19 +23,31 @@ button {
   border-radius: 50%;
   border: none;
   margin-bottom: 20px;
+  display: inline-block;
+  padding: 10px;
+  border: 1px solid;
+  background-color: white;
+  border-radius: 10px;
+  cursor: pointer;
+  margin-top: 0;
 }
 
-.container, .counter {
+.container, .counter, .color-flipper {
   height: 80vh;
   font-size: 30px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  text-align: center;
   background-color: #8f7b7b;
   padding: 40px;
   row-gap: 70px;
@@ -69,5 +81,78 @@ span {
   color: #da6c6c;
   margin: 40px;
   padding: 50px;
+}
+
+.color-flipper {
+  background-color: red;
+  margin-top: -43px;
+}
+
+#tip-container {
+  height: 80vh;
+  width: 350px;
+  background-color: #dfdbd2;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 100px 1fr;
+      grid-template-columns: 100px 1fr;
+  -ms-grid-rows: 75px 75px 75px 75px;
+      grid-template-rows: 75px 75px 75px 75px;
+      grid-template-areas: ". bill-amount" ". tip-percentage" ". tip-amount" ". total-bill" "btn btn";
+  margin: 0 auto;
+  border: 5px solid #eaeee6;
+  padding: 25px;
+  border-radius: 10%;
+  text-align: center;
+}
+
+#bill-amount {
+  -ms-grid-row: 1;
+  -ms-grid-column: 2;
+  grid-area: bill-amount;
+  height: 25px;
+  width: 250px;
+}
+
+#tip-percentage {
+  -ms-grid-row: 2;
+  -ms-grid-column: 2;
+  grid-area: tip-percentage;
+  height: 25px;
+  width: 250px;
+}
+
+#tip-amount {
+  -ms-grid-row: 3;
+  -ms-grid-column: 2;
+  grid-area: tip-amount;
+  height: 25px;
+  width: 250px;
+}
+
+#total-bill {
+  -ms-grid-row: 4;
+  -ms-grid-column: 2;
+  grid-area: total-bill;
+  height: 25px;
+  width: 250px;
+}
+
+#btn {
+  -ms-grid-row: 5;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 2;
+  grid-area: btn;
+  height: 25px;
+  width: auto;
+  padding-bottom: 25px;
+}
+
+.update {
+  color: black;
+  text-align: center;
+  margin-bottom: 20px;
+  font-size: x-large;
+  font-weight: 800;
 }
 /*# sourceMappingURL=style.css.map */
