--- a/styles/style.scss
+++ b/styles/style.scss
@@ -145,10 +145,11 @@ span{
     height: 25px;
     width: auto;
     padding-bottom:25px;
+    background-color: rgb(236, 150, 169);
 }
 
 .update {
-    color:black;
+    color:rgb(19, 1, 1);
   text-align: center;
   margin-bottom: 20px;
   font-size:x-large;
