--- a/styles/style.css
+++ b/styles/style.css
@@ -146,10 +146,11 @@ span {
   height: 25px;
   width: auto;
   padding-bottom: 25px;
+  background-color: #ec96a9;
 }
 
 .update {
-  color: black;
+  color: #130101;
   text-align: center;
   margin-bottom: 20px;
   font-size: x-large;
