--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,8 @@
+@import url('https://fonts.googleapis.com/css?family=Ubuntu');
+
+* {
+  box-sizing: border-box;
+}
 * {
   margin: 0;
 }
@@ -98,7 +103,11 @@ span {
       grid-template-columns: 100px 1fr;
   -ms-grid-rows: 75px 75px 75px 75px;
       grid-template-rows: 75px 75px 75px 75px;
-      grid-template-areas: ". bill-amount" ". tip-percentage" ". tip-amount" ". total-bill" "btn btn";
+      grid-template-areas: ". bill-amount"
+ ". tip-percentage"
+ ". tip-amount"
+ ". total-bill"
+ "btn btn";
   margin: 0 auto;
   border: 5px solid #eaeee6;
   padding: 25px;
@@ -157,3 +166,21 @@ span {
   font-weight: 800;
 }
 /*# sourceMappingURL=style.css.map */
+
+/* blury loading  */
+.bg {
+  background: url('https://images.unsplash.com/photo-1576161787924-01bb08dad4a4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2104&q=80')
+    no-repeat center center/cover;
+  position: absolute;
+  top: -30px;
+  left: -30px;
+  width: calc(100vw + 60px);
+  height: calc(100vh + 60px);
+  z-index: -1;
+  filter: blur(0px);
+}
+
+.loading-text {
+  font-size: 50px;
+  color: #fff;
+}
