--- a/styles/style.css
+++ b/styles/style.css
@@ -1,159 +1,93 @@
-* {
-  margin: 0;
+.rn-banner {
+  background-color: #1e1e22;
+  border-radius: 5px;
+  box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1),
+    0 4px 6px -2px rgba(0, 0, 0, 0.05);
+  color: #fff;
+  font-family: Inter var, system-ui, -apple-system, BlinkMacSystemFont, Segoe UI,
+    Roboto, Helvetica Neue, Arial, Noto Sans, sans-serif, Apple Color Emoji,
+    Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
+  font-size: 16px;
+  font-weight: 400;
+  letter-spacing: 0.5px;
+  margin: 20px 0;
+  padding: 10px 15px;
 }
-
-h1 {
-  color: #f0dddd;
-  font-size: larger;
-}
-
-hr {
-  height: 1px;
-  width: 100%;
-  background-color: black;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-button {
-  text-transform: uppercase;
-  padding: 30px;
-  font-family: 'Courier New';
-  font-weight: bold;
-  border-radius: 50%;
-  border: none;
-  margin-bottom: 20px;
-  display: inline-block;
-  padding: 10px;
-  border: 1px solid;
-  background-color: white;
-  border-radius: 10px;
-  cursor: pointer;
-  margin-top: 0;
-}
-
-.container, .counter, .color-flipper {
-  height: 80vh;
-  font-size: 30px;
-  display: -webkit-box;
-  display: -ms-flexbox;
+.rn-banner-inner {
+  align-items: center;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  background-color: #8f7b7b;
-  padding: 40px;
-  row-gap: 70px;
+  flex-wrap: nowrap;
+  justify-content: space-between;
+}
+.rn-banner-left {
+  align-items: center;
+  display: flex;
+  flex-grow: 1;
+  flex-wrap: wrap;
+  justify-content: space-between;
 }
 
-select option {
-  text-transform: uppercase;
-  font-weight: bold;
+.rn-banner-right {
+  align-items: center;
+  display: flex;
 }
-
-.second {
-  width: 200px;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  margin: 10px auto;
-  height: 50px;
-  border-radius: 5%;
+.rn-banner-btn,
+.rn-banner-btn:hover {
+  align-items: center;
+  background-color: #fff;
+  border-radius: 5px;
+  color: #5850ec;
+  cursor: pointer;
+  display: flex;
+  flex-grow: 0;
+  font-size: 14px;
+  padding: 10px 20px;
+  justify-content: space-around;
+  margin: 5px 0;
+  text-decoration: none;
   text-align: center;
-  border: none;
-}
-
-.counter {
-  background-color: #35caca;
-  margin-bottom: 40px;
-  row-gap: 30px;
-}
-
-span {
-  font-size: 100px;
-  color: #da6c6c;
-  margin: 40px;
-  padding: 50px;
-}
-
-.color-flipper {
-  background-color: red;
-  margin-top: -43px;
-}
-
-#tip-container {
-  height: 80vh;
-  width: 400px;
-  background-color: #dfdbd2;
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-columns: 100px 1fr;
-      grid-template-columns: 100px 1fr;
-  -ms-grid-rows: 75px 75px 75px 75px;
-      grid-template-rows: 75px 75px 75px 75px;
-      grid-template-areas: ". bill-amount" ". tip-percentage" ". tip-amount" ". total-bill" "btn btn";
-  margin: 0 auto;
-  border: 5px solid #eaeee6;
-  padding: 25px;
-  border-radius: 10%;
-  text-align: center;
-}
-
-#bill-amount {
-  -ms-grid-row: 1;
-  -ms-grid-column: 2;
-  grid-area: bill-amount;
-  height: 25px;
-  width: 250px;
-}
-
-#tip-percentage {
-  -ms-grid-row: 2;
-  -ms-grid-column: 2;
-  grid-area: tip-percentage;
-  height: 25px;
-  width: 250px;
-}
-
-#tip-amount {
-  -ms-grid-row: 3;
-  -ms-grid-column: 2;
-  grid-area: tip-amount;
-  height: 25px;
-  width: 250px;
-}
-
-#total-bill {
-  -ms-grid-row: 4;
-  -ms-grid-column: 2;
-  grid-area: total-bill;
-  height: 25px;
-  width: 250px;
-}
-
-#btn {
-  -ms-grid-row: 5;
-  -ms-grid-column: 1;
-  -ms-grid-column-span: 2;
-  grid-area: btn;
-  height: 25px;
   width: auto;
-  padding-bottom: 25px;
-  background-color: #ec96a9;
 }
-
-.update {
-  color: #130101;
-  text-align: center;
-  margin-bottom: 20px;
-  font-size: x-large;
-  font-weight: 800;
+.rn-close-btn {
+  align-self: flex-start;
+  cursor: pointer;
+  fill: none;
+  flex-shrink: 0;
+  height: 24px;
+  margin: 10px 5px 0 15px;
+  stroke: currentColor;
+  width: 24px;
 }
-/*# sourceMappingURL=style.css.map */
+.rn-close-btn path {
+  stroke-linecap: round;
+  stroke-linejoin: round;
+  stroke-width: 2px;
+}
+.rn-banner-prefix {
+  background-color: #42389d;
+  border-radius: 50px;
+  display: inline-block;
+  font-size: 14px;
+  margin: 5px 10px 5px 0;
+  padding: 5px 12px;
+  text-transform: capitalize;
+  white-space: nowrap;
+}
+.rn-banner-link,
+.rn-banner-link:hover {
+  color: inherit;
+  flex-grow: 1;
+  margin: 5px 10px 5px 0;
+  text-decoration: none;
+}
+@media screen and (max-width: 640px) {
+  .rn-banner-left {
+    display: block;
+  }
+  .rn-banner-btn {
+    margin-left: 40px;
+  }
+  .rn-close-btn {
+    margin: 5px 0 0 15px;
+  }
+}
