--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,5 @@
 .rn-banner {
-  background-color: #1e1e22;
+  background-color: red;
   border-radius: 5px;
   box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1),
     0 4px 6px -2px rgba(0, 0, 0, 0.05);
